Fix ordering bug in languange menu on mobile selector
closes: #4

--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -162,7 +162,7 @@ Add transition to containers so they can push in and out.
 /*
 This is the parent `<div>` that contains the menu and the content area.
 */
-#menu #layout.active {
+#layout.active #menu {
   right: 11em;
   width: 11em;
 }
